--- a/css/style.css
+++ b/css/style.css
@@ -20,9 +20,11 @@ h1, p{
     padding: 30px;
   }
   
-  .img-div image {
+  #image {
     display: block;
     margin: auto;
+    max-width: 100%;
+    height: auto;
   }
 
 h4 {
